Finished with adding other functional annotations to process_communities function

--- a/jupyter/GRN_inference.ipynb
+++ b/jupyter/GRN_inference.ipynb
@@ -3796,7 +3796,7 @@
     "    data_type=dtype_dropdown, \n",
     "    data=data_dropdown,\n",
     "    algo=['leiden', 'louvain'],\n",
-    "    anno_db=['GO'],\n",
+    "    anno_db=['GO', 'hallmark', 'KEGG', 'immunological'],\n",
     "    wordcloud_display=['funcs', 'genes'],\n",
     "    save_fig=[False, True]\n",
     ")\n",
