Added a script to produce GREASY parallel computation

--- a/jupyter/GRN_inference.ipynb
+++ b/jupyter/GRN_inference.ipynb
@@ -4221,7 +4221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -4390,6 +4390,145 @@
     "\n",
     "tasks = tasks.strip()\n",
     "with open(f'/gpfs/projects/bsc08/bsc08890/sbatch/greasy/greasy_tasks_{patient}_{method}', 'w') as f:\n",
+    "    f.write(tasks)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>num_cells</th>\n",
+       "      <th>Macrophage</th>\n",
+       "      <th>T_cells</th>\n",
+       "      <th>DC</th>\n",
+       "      <th>Pre-B_cell_CD34-</th>\n",
+       "      <th>Monocyte</th>\n",
+       "      <th>NK_cell</th>\n",
+       "      <th>B_cell</th>\n",
+       "      <th>Epithelial_cells</th>\n",
+       "      <th>BM</th>\n",
+       "      <th>Pro-B_cell_CD34+</th>\n",
+       "      <th>Neutrophils</th>\n",
+       "      <th>GMP</th>\n",
+       "      <th>Pro-Myelocyte</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>C152</th>\n",
+       "      <td>2557.0</td>\n",
+       "      <td>466.0</td>\n",
+       "      <td>397.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>174.0</td>\n",
+       "      <td>795.0</td>\n",
+       "      <td>74.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>201.0</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>36.0</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>13.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     num_cells Macrophage T_cells    DC Pre-B_cell_CD34- Monocyte NK_cell  \\\n",
+       "C152    2557.0      466.0   397.0  41.0            174.0    795.0    74.0   \n",
+       "\n",
+       "     B_cell Epithelial_cells   BM Pro-B_cell_CD34+ Neutrophils   GMP  \\\n",
+       "C152  322.0            201.0  7.0             36.0        30.0  13.0   \n",
+       "\n",
+       "     Pro-Myelocyte  \n",
+       "C152           1.0  "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31msbatch\u001b[0m \u001b[36m--job-name\u001b[0m='C152_GREASY_community_ana_leiden' \u001b[36m--ntasks\u001b[0m=7 \u001b[36m--time\u001b[0m='24:00:00' \u001b[36m--cpus-per-task\u001b[0m=8 \u001b[31mgreasy_community_ana.sh\u001b[0m C152 leiden\n",
+      "\n",
+      "../community_ana.sh C152 raw_data leiden GREASY 1\n",
+      "../community_ana.sh C152 raw_data_Macrophage leiden GREASY 2\n",
+      "../community_ana.sh C152 raw_data_T_cells leiden GREASY 3\n",
+      "../community_ana.sh C152 raw_data_DC leiden GREASY 4\n",
+      "../community_ana.sh C152 raw_data_Pre-B_cell_CD34- leiden GREASY 5\n",
+      "../community_ana.sh C152 raw_data_Monocyte leiden GREASY 6\n",
+      "../community_ana.sh C152 raw_data_NK_cell leiden GREASY 7\n",
+      "../community_ana.sh C152 raw_data_B_cell leiden GREASY 8\n",
+      "../community_ana.sh C152 raw_data_Epithelial_cells leiden GREASY 9\n",
+      "../community_ana.sh C152 raw_data_BM leiden GREASY 10\n",
+      "../community_ana.sh C152 raw_data_Pro-B_cell_CD34+ leiden GREASY 11\n",
+      "../community_ana.sh C152 raw_data_Neutrophils leiden GREASY 12\n",
+      "../community_ana.sh C152 raw_data_GMP leiden GREASY 13\n",
+      "../community_ana.sh C152 raw_data_Pro-Myelocyte leiden GREASY 14\n"
+     ]
+    }
+   ],
+   "source": [
+    "cyan_color = lambda x: colored(x, 'cyan')\n",
+    "red_color = lambda x: colored(x, 'red')\n",
+    "\n",
+    "# Patients - 'C141', 'C142', 'C143', 'C144', 'C145', 'C146', 'C51', 'C52', 'C100', 'C148', 'C149', 'C152'\n",
+    "\n",
+    "patient = 'C152'\n",
+    "algo = 'leiden'\n",
+    "data_types = _ALL_FILE_PREFIXES[patient]\n",
+    "\n",
+    "n_tasks = len(data_types) // 2  # Running only half of tasks in parallel\n",
+    "cpus_per_task = 8\n",
+    "hours = 24\n",
+    "num_workers_per_task = cpus_per_task // 3\n",
+    "\n",
+    "qos_debug = False\n",
+    "qos_debug_cmd = f' {cyan_color(\"--qos\")}=debug ' if qos_debug else ' '\n",
+    "\n",
+    "display(pd.DataFrame(cell_type_x).T)\n",
+    "\n",
+    "print(f\"{red_color('sbatch')} {cyan_color('--job-name')}='{patient}_GREASY_community_ana_{algo}' \"\n",
+    "      f\"{cyan_color('--ntasks')}={n_tasks} {cyan_color('--time')}='{hours}:00:00' \"\n",
+    "      f\"{cyan_color('--cpus-per-task')}={cpus_per_task}{qos_debug_cmd}{red_color('greasy_community_ana.sh')} {patient} {algo}\")\n",
+    "\n",
+    "tasks = ''\n",
+    "print()\n",
+    "i = 1\n",
+    "for d in data_types:\n",
+    "    task = f\"../community_ana.sh {patient} {d} {algo} GREASY {i}\"\n",
+    "    print(task)\n",
+    "    i += 1\n",
+    "    tasks += f'{task}\\n'\n",
+    "\n",
+    "tasks = tasks.strip()\n",
+    "with open(f'/gpfs/projects/bsc08/bsc08890/sbatch/greasy/greasy_tasks_community_ana_{patient}_{algo}', 'w') as f:\n",
     "    f.write(tasks)"
    ]
   },
