wordcloud plot improvement

--- a/jupyter/GRN_inference.ipynb
+++ b/jupyter/GRN_inference.ipynb
@@ -5218,13 +5218,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
+   "execution_count": 99,
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e19b09dde2a04baa9acf131d5550f528",
+       "model_id": "8b3f877c829c4c02b102e2a9256891db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -5240,7 +5242,7 @@
     "from src.func import *\n",
     "%autoreload 2\n",
     "%R source('src/func.R')\n",
-    "def resave_plot(data, data_type, plot_type, save_fig, save_fig_title):\n",
+    "def resave_plot(data, data_type, plot_type, layout_seed, save_fig, save_fig_title):\n",
     "    \n",
     "    def highlight_TFs(word, font_size, position, orientation, font_path, random_state):\n",
     "        TF_color = (255, 0, 0)  # red\n",
@@ -5249,13 +5251,21 @@
     "        else:\n",
     "            r, g, b, alpha = plt.get_cmap('viridis')(font_size / 120)\n",
     "            return (int(r * 255), int(g * 255), int(b * 255))\n",
+    "        \n",
+    "    def kex(N):\n",
+    "        alpha=2*np.pi/N\n",
+    "        alphas = alpha*np.arange(N)\n",
+    "        coordX = np.cos(alphas)\n",
+    "        coordY = np.sin(alphas)\n",
+    "\n",
+    "        return np.c_[coordX, coordY, alphas]\n",
     "\n",
     "    \n",
     "    algo = 'leiden'\n",
     "    limit_anno_until = 50\n",
     "    G_size_to_plot = 2000\n",
     "    seed = 42\n",
-    "    layout_seed = 200\n",
+    "    plot_genes_around_anno = True\n",
     "        \n",
     "    # Loading the gene functional annotation\n",
     "    anno_db_tags = ['GO', 'KEGG', 'immunological', 'hallmark']\n",
@@ -5332,6 +5342,9 @@
     "                ])) for i, gene_score_list in norm_partition_genes.items()\n",
     "            } for tag, gene_func in gene_func_dbs.items()\n",
     "    }\n",
+    "    if plot_type.startswith('func'):\n",
+    "        # Getting current functional annotation\n",
+    "        curr_partition_funcs = partition_funcs[plot_type[plot_type.find('_') + 1:]]\n",
     "    print('Obtained cluster functions..')\n",
     "    \n",
     "    if plot_type.startswith('enrich'):\n",
@@ -5346,12 +5359,9 @@
     "        %R -i ora_input,db\n",
     "        %R enriched_out <- suppressWarnings(ora_for_wordcloud(ora_input, db))\n",
     "        %R -o enriched_out\n",
-    "        found_enriched_funcs = dict(enriched_out.groupby('Cluster')['Description'] \\\n",
+    "        curr_partition_funcs = dict(enriched_out.groupby('Cluster')['Description'] \\\n",
     "            .agg(lambda x: ' '.join(x)) \\\n",
-    "            .rename(lambda x: int(x[x.rfind('_') + 1:])))\n",
-    "        curr_partition_funcs = {\n",
-    "            i: (found_enriched_funcs[i] if i in found_enriched_funcs.keys() else '') for i in range(len(num_partitions))\n",
-    "        }\n",
+    "            .rename(lambda x: int(x[x.rfind('_') + 1:])).fillna(\"\"))\n",
     "        print('Obtained enriched cluster functions..')\n",
     "    \n",
     "    # Getting positions of squeezed graph - we do not plot every gene on the figure\n",
@@ -5366,10 +5376,6 @@
     "            partition_coords[partition[gene]] += [coords]\n",
     "    \n",
     "    cmap = ListedColormap(sns.color_palette(cc.glasbey_bw, n_colors=num_partitions).as_hex())\n",
-    "    \n",
-    "    if plot_type.startswith('func'):\n",
-    "        # Getting current functional annotation\n",
-    "        curr_partition_funcs = partition_funcs[plot_type[plot_type.find('_') + 1:]]\n",
     "\n",
     "    print('Started plotting..')\n",
     "    f, ax = plt.subplots(figsize=(20, 35))\n",
@@ -5395,11 +5401,27 @@
     "        }    \n",
     "\n",
     "    # Plotting clouds\n",
+    "    # getting the number of genes to plot around functionally annotated cloud\n",
+    "    num_genes_to_plot_around = list(map(int, scale(df['num_nodes'], 3, 15)))\n",
+    "    coefs = scale(1 / df['num_nodes'], 1.2, 3)\n",
     "    for i, coords in partition_coords.items():\n",
     "        x, y = zip(*coords)\n",
     "        min_x, max_x = min(x), max(x)\n",
     "        min_y, max_y = min(y), max(y)\n",
     "        ax.imshow(wordclouds[i], interpolation='bilinear', extent=[min_x, max_x, min_y, max_y])\n",
+    "        if plot_type != 'genes' and plot_genes_around_anno:\n",
+    "            radius = (max_x - min_x) / 2\n",
+    "            center = ((max_x + min_x) / 2, (max_y + min_y) / 2)\n",
+    "            coef = coefs[i]\n",
+    "            curr_genes = list(central_gene_scores[i].keys())[:num_genes_to_plot_around[i]]\n",
+    "            points = kex(len(curr_genes))\n",
+    "            for k, curr_gene in enumerate(curr_genes):\n",
+    "                a = points[k, 2]\n",
+    "                x, y = (center[0] + radius * np.cos(a) * coef, center[1] + radius * np.sin(a) * coef)\n",
+    "                if points[k, 0] < 0:\n",
+    "                    a = a - np.pi\n",
+    "                ax.text(x, y, curr_gene, ha=\"center\", va=\"center\", fontsize=12, \n",
+    "                        color='r' if curr_gene in lambert_TF_names or curr_gene in dorothea_TF_names else 'dimgray')\n",
     "\n",
     "    nx.draw(squeezed_G, squeezed_pos, ax=ax, arrowstyle=\"->\", arrowsize=20, \n",
     "            connectionstyle=f'arc3, rad = 0.25', edge_color='gray', width=0.4, \n",
@@ -5427,6 +5449,7 @@
     "    data_type = ['all', 'C', 'M', 'S'],\n",
     "    plot_type = ['genes', 'func_GO', 'func_KEGG', 'func_immunological', 'func_hallmark',\n",
     "                 'enrich_func_GO', 'enrich_func_KEGG', 'enrich_func_WP', 'enrich_func_Reactome'],\n",
+    "    layout_seed = [42, 84, 100, 150, 200, 250, 300, 350, 400],\n",
     "    save_fig = [True, False],\n",
     "    save_fig_title = 'tmp_wordcloud'\n",
     ")\n",
