--- a/notebooks/GRN_inference.ipynb
+++ b/notebooks/GRN_inference.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -45,15 +45,14 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The rpy2.ipython extension is already loaded. To reload it, use:\n",
-      "  %reload_ext rpy2.ipython\n",
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
-      "The line_profiler extension is already loaded. To reload it, use:\n",
-      "  %reload_ext line_profiler\n"
+     "ename": "ImportError",
+     "evalue": "cannot import name 'get_avail_data_mat' from 'src.network_analysis' (/gpfs/home/bsc08/bsc08890/scGRN_analysis/src/network_analysis/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mImportError\u001B[0m                               Traceback (most recent call last)",
+      "\u001B[0;32m<ipython-input-3-12d3f94e7bc7>\u001B[0m in \u001B[0;36m<module>\u001B[0;34m()\u001B[0m\n\u001B[1;32m     38\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     39\u001B[0m \u001B[0;31m# Custom funcs  - # FIXME: change to package name\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0;32m---> 40\u001B[0;31m \u001B[0;32mfrom\u001B[0m \u001B[0msrc\u001B[0m\u001B[0;34m.\u001B[0m\u001B[0mana\u001B[0m \u001B[0;32mimport\u001B[0m \u001B[0mload_gene_func_db\u001B[0m\u001B[0;34m,\u001B[0m \u001B[0mget_avail_data_mat\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n\u001B[0m\u001B[1;32m     41\u001B[0m \u001B[0;34m\u001B[0m\u001B[0m\n\u001B[1;32m     42\u001B[0m \u001B[0;31m# Jupyter utils\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0;34m\u001B[0m\u001B[0m\n",
+      "\u001B[0;31mImportError\u001B[0m: cannot import name 'get_avail_data_mat' from 'src.network_analysis' (/gpfs/home/bsc08/bsc08890/scGRN_analysis/src/network_analysis/__init__.py)"
      ]
     }
    ],
@@ -97,7 +96,7 @@
     "os.chdir(os.path.expanduser('~/scGRN_analysis'))\n",
     "\n",
     "# Custom funcs  - # FIXME: change to package name\n",
-    "from src.func import *\n",
+    "from src.ana import load_gene_func_db, get_avail_data_mat\n",
     "\n",
     "# Jupyter utils\n",
     "from IPython.display import display  # displaying results in jupyter\n",
@@ -290,8 +289,7 @@
     "_LOADED_PATIENTS = ['C51', 'C52', 'C141', 'C142', 'C148', 'C149']\n",
     "_LOADED_CELL_TYPES = ['T_cells', 'Macrophage', 'NK_cell', 'Monocyte']\n",
     "\n",
-    "# Loading sample meta data, reordering patients\n",
-    "full_meta = pd.read_csv(_FMETA, sep='\\t', index_col=0)\n",
+    "# Reordering patients\n",
     "full_meta = full_meta.reindex(index=_LOADED_PATIENTS + ['C100', 'C144', 'C143', 'C145', 'C146', 'C152'])\n",
     "\n",
     "# Adding cell-type frequency to the metadata\n",
@@ -312,10 +310,10 @@
     "    pat: full_cell_type_freq.loc[pat].dropna().index.to_list() for pat in _ALL_PATIENTS\n",
     "}\n",
     "_ALL_FILE_PREFIXES = {\n",
-    "    pat: ['raw_data'] + list(map(lambda x: 'raw_data_' + x, cell_types)) for pat, cell_types in _ALL_PATIENT_CELL_TYPES.items()\n",
+    "    pat: ['raw_data'] + list(map(lambda s: 'raw_data_' + s, cell_types)) for pat, cell_types in _ALL_PATIENT_CELL_TYPES.items()\n",
     "}\n",
     "_ALL_TITLES = {\n",
-    "    pat: list(map(lambda x: 'all data' if x == 'raw_data' else 'all data, only HVGs' if 'HVG' in x else x.replace('raw_data_', '').replace('_', ' '), files))\n",
+    "    pat: list(map(lambda s: 'all data' if s == 'raw_data' else s.replace('raw_data_', '').replace('_', ' '), files))\n",
     "    for pat, files in _ALL_FILE_PREFIXES.items()\n",
     "}\n",
     "_ALL_FIG_DIRS = {\n",
@@ -324,55 +322,12 @@
     "for fig_dir in _ALL_FIG_DIRS.values():  # creating folders for figures per patient\n",
     "    os.makedirs(fig_dir, exist_ok=True)\n",
     "\n",
-    "# Also saving information about loaded patients (in RAM)\n",
-    "_LOADED_PATIENT_CELL_TYPES = {\n",
-    "    pat: cell_type_freq.loc[pat].dropna().index.to_list() for pat in _LOADED_PATIENTS\n",
-    "}\n",
-    "_LOADED_FILE_PREFIXES = {\n",
-    "    pat: ['raw_data'] + list(map(lambda x: 'raw_data_' + x, cell_types)) for pat, cell_types in _LOADED_PATIENT_CELL_TYPES.items()\n",
-    "}\n",
-    "\n",
-    "# Loading TFs\n",
-    "lambert_TF_names = pd.read_csv(_TF_LIST_lambert, header=None)[0].to_list()\n",
-    "dorothea_TF_names = list(\n",
-    "    pd.read_csv(_TF_LIST_dorothea, sep='\\t') \\\n",
-    "        .loc[lambda x: x['confidence'].isin(['A', 'B', 'C'])]['tf'].unique()\n",
-    ")\n",
-    "TF_names = lambert_TF_names  # default TF names\n",
-    "\n",
-    "# Loading colors\n",
-    "colors = dict(green='#39B600', yellow='#D89000', red='#F8766D', blue='#00B0F6',\n",
-    "              purple='#9590FF', cyan='#00BFC4', pink='E76BF3', light_pink='#FF62BC',\n",
-    "              saturated_green='#00BF7D')\n",
-    "\n",
-    "# Loading gene GO description - it was downloaded using ENSEMBL BioMart\n",
-    "GO_annotation = load_gene_func_db('GO')\n",
-    "\n",
-    "# Defining filter_quantile for getting the most important nodes in the graph\n",
-    "_Q_THRESH = 0.95\n",
-    "\n",
-    "_NDEX_PROCESSES = ['Immune_response', 'T_cell_activation', 'F-actin_assembly',\n",
-    "             '\"natural killer cell activation\"', '\"natural killer cell differentiation\"',\n",
-    "             'Inflammation', 'Proliferation', 'Glycogen_synthesis', 'Protein_synthesis',\n",
-    "             'Survival', 'Interferon_Production', 'Immune_response', '\"Pulmonary Disease, Chronic Obstructive\"',\n",
-    "             '\"CD8-positive, alpha-beta T cell proliferation\"', '\"lymphocyte chemotaxis\"', '\"T-cell migration\"',\n",
-    "             '\"Cytotoxic T-cell activation\"', '\"T cell activation\"', '\"M1 macrophage activation\"',\n",
-    "             '\"M2 macrophage activation\"', '\"Pulmonary Disease, Chronic Obstructive\"', '\"Smoke, cigarette\"',\n",
-    "             '\"monocyte chemotaxis\"', '\"macrophage activation\"', '\"cytoskeleton organization\"',\n",
-    "             '\"macrophage chemotaxis\"', '\"neutrophil chemotaxis\"', '\"apoptotic cell clearance\"',\n",
-    "             'phagocytosis', 'M1_polarization', 'M2_polarization']\n",
-    "\n",
     "# Loading exemplary data\n",
     "ex_pat = 'C141'\n",
-    "_INPUT_NORM_FN = os.path.join(_DATA_HOME, f'{ex_pat}/data/Seurat/norm_data.tsv')\n",
-    "_INPUT_NORM_HVG_FN = os.path.join(_DATA_HOME, f'{ex_pat}/data/Seurat/norm_data_HVG.tsv')\n",
-    "ex_df = pd.read_csv(_INPUT_NORM_FN, sep='\\t').T\n",
-    "ex_HVG_df = pd.read_csv(_INPUT_NORM_HVG_FN, sep='\\t').T\n",
-    "ex_HVGs = ex_HVG_df.columns\n",
+    "ex_df = pd.read_csv(os.path.join(_DATA_HOME, f'{ex_pat}/data/Seurat/norm_data.tsv'), sep='\\t').T\n",
     "\n",
     "# Quick reporting\n",
     "print(f'As an example, the expression matrix of {ex_pat} patient contains {ex_df.shape[0]} cells and {ex_df.shape[1]} genes:')\n",
-    "print(f'And as an example, the dataset from {ex_pat} patient contains {len(ex_HVGs)} highly-variable genes.')\n",
     "display(ex_df.head())\n",
     "print(colored('Full metadata:', 'green'))\n",
     "display(full_meta)\n",
