fixed paths and other small changes

--- a/notebooks/GRNBoost2_EDA.ipynb
+++ b/notebooks/GRNBoost2_EDA.ipynb
@@ -9,9 +9,9 @@
     "tags": []
    },
    "source": [
-    "# Analysis of gene regulatory networks inferred from COVID-19 patients\n",
+    "# Exploratory analysis of gene regulatory networks inferred from COVID-19 patients\n",
     "\n",
-    "This notebook contains the analysis pipeline of gene regulatory networks (GRNs) computed on scRNA-seq data of COVID-19 patients ([Liao *et al.*, 2020](https://www.nature.com/articles/s41591-020-0901-9)). The data is available on GEO ([GSE145926](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE145926)) and contains 10xGenomics pipeline samples from the lung immune microenvironment in the bronchoalveolar lavage fluid (BALF) from <span style=\"color:red\">6 severe</span> and <span style=\"color:yellow\">3 moderate</span> COVID-19 patients and <span style=\"color:green\">3 healthy</span> controls (look below).\n",
+    "This notebook contains the exploratory analysis pipeline of gene regulatory networks (GRNs) computed on scRNA-seq data of COVID-19 patients ([Liao *et al.*, 2020](https://www.nature.com/articles/s41591-020-0901-9)). The data is available on GEO ([GSE145926](https://www.ncbi.nlm.nih.gov/geo/query/acc.cgi?acc=GSE145926)) and contains 10xGenomics pipeline samples from the lung immune microenvironment in the bronchoalveolar lavage fluid (BALF) from <span style=\"color:red\">6 severe</span> and <span style=\"color:yellow\">3 moderate</span> COVID-19 patients and <span style=\"color:green\">3 healthy</span> controls (look below).\n",
     "\n",
     "| Patient ID   | C51 | C52 | C100 | C141 | C142 | C144 | C143 | C145 | C146 | C148 | C149 | C152 |\n",
     "|--------------|-----|-----|------|------|------|------|------|------|------|------|------|------|\n",
