re-formatted viper regulon analysis, added a new visualization in Differential_analysis notebook

--- a/notebooks/GRNBoost2_EDA.ipynb
+++ b/notebooks/GRNBoost2_EDA.ipynb
@@ -3881,12 +3881,12 @@
     }
    ],
    "source": [
-    "def hist_importance_corr(pat, cell_type, net_type, save_fig):\n",
+    "def hist_importance_corr(net_type, pat, cell_type, save_fig):\n",
     "    \"\"\"\n",
     "    Histogram of obtained GRNBoost2 connection importance between genes and corresponding Spearman correlation.\n",
     "    \n",
-    "    :param pat: Patient ID\n",
     "    :param net_type: Network type\n",
+    "    :param pat: Patient ID\n",
     "    :param cell_type: Provided cell type\n",
     "    :param save_fig: Whether to save the figure\n",
     "    \"\"\"\n",
@@ -3958,9 +3958,9 @@
     "\n",
     "widget = interact(\n",
     "    hist_importance_corr, \n",
+    "    net_type=n_type_dropdown, \n",
     "    pat=p_dropdown, \n",
     "    cell_type=c_type_dropdown, \n",
-    "    net_type=n_type_dropdown, \n",
     "    save_fig=sf_dropdown\n",
     ")"
    ]
@@ -4413,13 +4413,13 @@
     }
    ],
    "source": [
-    "def top_links_graph(pat, cell_type, net_type, top_n, save_fig):\n",
+    "def top_links_graph(net_type, pat, cell_type, top_n, save_fig):\n",
     "    \"\"\"\n",
     "    Visualize a subgraph of GRN with top importance links.\n",
     "    \n",
+    "    :param net_type: Network type\n",
     "    :param pat: Patient ID\n",
     "    :param cell_type: Provided cell type\n",
-    "    :param net_type: Network type\n",
     "    :param top_n: The number of top links to visualize\n",
     "    :param save_fig: Whether to save the figure\n",
     "    \"\"\"\n",
@@ -4457,9 +4457,9 @@
     "        \n",
     "widget = interact(\n",
     "    top_links_graph,\n",
+    "    net_type=n_type_dropdown,\n",
     "    pat=p_dropdown, \n",
     "    cell_type=c_type_dropdown, \n",
-    "    net_type=n_type_dropdown,\n",
     "    top_n=IntSlider(min=1, max=151, step=1, value=50),\n",
     "    save_fig=sf_dropdown,\n",
     ")"
@@ -4505,13 +4505,13 @@
     "# Please choose your TFs\n",
     "TFs = 'STAT1, ETS1, JUND, REL, IRF7, ELF1'.split(', ')\n",
     "\n",
-    "def fixed_TFs_top_targets_graph(pat, cell_type, net_type, TFs, top_n, save_fig):\n",
+    "def fixed_TFs_top_targets_graph(net_type, pat, cell_type, TFs, top_n, save_fig):\n",
     "    \"\"\"\n",
     "    Visualize a subgraph of GRN with chosen TFs and their top importance targets (for enriched TF-target networks only).\n",
     "\n",
+    "    :param net_type: Network type\n",
     "    :param pat: Patient ID\n",
     "    :param cell_type: Provided cell type\n",
-    "    :param net_type: Network type\n",
     "    :param TFs: A list of transcription factors to visualize\n",
     "    :param top_n: The number of top links to visualize\n",
     "    :param save_fig: Whether to save the figure\n",
@@ -4560,9 +4560,9 @@
     "        \n",
     "widget = interact(\n",
     "    fixed_TFs_top_targets_graph,\n",
+    "    net_type=n_type_dropdown,\n",
     "    pat=p_dropdown, \n",
     "    cell_type=c_type_dropdown, \n",
-    "    net_type=n_type_dropdown,\n",
     "    TFs=fixed(TFs),\n",
     "    top_n=IntSlider(min=1, max=151, step=1, value=10),\n",
     "    save_fig=sf_dropdown\n",
@@ -4607,7 +4607,7 @@
    "source": [
     "genes = ['NFKB1', 'STAT3', 'MYC', 'ETS1', 'FOS'] \n",
     "\n",
-    "def genes_from_list_graph(pat, cell_type, net_type, filtered, genes, save_fig):\n",
+    "def genes_from_list_graph(net_type, pat, cell_type, filtered, genes, save_fig):\n",
     "    \"\"\"\n",
     "    Visualize a subgraph of GRN with chosen genes.\n",
     "\n",
@@ -4656,9 +4656,9 @@
     "        \n",
     "widget = interact(\n",
     "    genes_from_list_graph,\n",
+    "    net_type=n_type_dropdown,\n",
     "    pat=p_dropdown, \n",
     "    cell_type=c_type_dropdown, \n",
-    "    net_type=n_type_dropdown,\n",
     "    filtered=fltrd_dropdown,\n",
     "    genes=fixed(genes),\n",
     "    save_fig=sf_dropdown\n",
@@ -4701,7 +4701,7 @@
     }
    ],
    "source": [
-    "def GRN_vs_ndex_graph(ndex_net, pat, cell_type, net_type, save_fig):\n",
+    "def GRN_vs_ndex_graph(ndex_net, net_type, pat, cell_type, save_fig):\n",
     "    \"\"\"\n",
     "    Compare the inferred GRN with similar NDEx network (looking at the same nodes and edges).\n",
     "\n",
@@ -4816,10 +4816,10 @@
     "    \n",
     "widgets = interactive(\n",
     "    GRN_vs_ndex_graph, \n",
-    "    pat=p_dropdown, \n",
     "    ndex_net=ndex_dropdown,\n",
-    "    cell_type=c_type_dropdown, \n",
     "    net_type=n_type_dropdown,\n",
+    "    pat=p_dropdown, \n",
+    "    cell_type=c_type_dropdown, \n",
     "    save_fig=sf_dropdown\n",
     ")\n",
     "widgets"
