Finished re-formatting run_seurat_individual.R/sh

--- a/notebooks/Generate_sbatch_commands.ipynb
+++ b/notebooks/Generate_sbatch_commands.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +449,7 @@
        "[12 rows x 25 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -500,6 +500,65 @@
     "# Displaying full metadata\n",
     "print('Full metadata:')\n",
     "full_meta"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## `sc_pipeline`\n",
+    "\n",
+    "Obtain `sbatch` commands to run the COVID-19 single cell data processing pipeline using `Seurat` package. The script is located in `scGRN/single_cell_processing/sc_pipeline/sc_pipeline.sh`.\n",
+    "\n",
+    "*Please move to* `scGRN/sc_pipeline` *or specify* `CURR_DIR` with `sc_pipeline.sh` script *in the cell below.*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='2:00:00' \u001b[36m--qos\u001b[0m=debug  \u001b[36m--cpus-per-task\u001b[0m=48 \u001b[36m--job-name\u001b[0m='sc_pipeline' \u001b[36m--chdir\u001b[0m='.' \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/sc_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/sc_pipeline_%j.err ./\u001b[31msc_pipeline.sh\u001b[0m ../sc_metadata.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 HumanPrimaryCellAtlasData /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/data/SingleR 12 F T F F\n"
+     ]
+    }
+   ],
+   "source": [
+    "CURR_DIR = '.'\n",
+    "\n",
+    "# Current constants\n",
+    "META = '../sc_metadata.tsv'\n",
+    "OUT = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19'\n",
+    "ANNO = 'HumanPrimaryCellAtlasData'\n",
+    "ANNO_F = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/data/SingleR'\n",
+    "N_PROC = 12\n",
+    "PRE_MERGED = 'F'\n",
+    "SOBJ = 'T'\n",
+    "SFOBJ = 'F'\n",
+    "VERB = 'F'\n",
+    "\n",
+    "log_folder = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs'  # <- choose log folder!\n",
+    "log_out = os.path.join(log_folder, f'sc_pipeline_%j.out')\n",
+    "log_err = os.path.join(log_folder, f'sc_pipeline_%j.err')\n",
+    "\n",
+    "cpus_per_task = 48\n",
+    "hours = 12\n",
+    "\n",
+    "high_mem = True  # using high-memory nodes for large datasets\n",
+    "high_mem_cmd = f' {cyan_color(\"--constraint\")}=highmem ' if high_mem else ' '  # formatting high_mem\n",
+    "\n",
+    "qos_debug = False  # whether to use QOS queue (debug or not)\n",
+    "qos_debug_cmd = f' {cyan_color(\"--qos\")}=debug ' if qos_debug else ' '  # formatting qos_debug\n",
+    "hours = 2 if qos_debug else hours  # decreasing the number of hours for debug mode\n",
+    "\n",
+    "print(f\"{red_color('sbatch')} {cyan_color('--time')}='{hours}:00:00'{qos_debug_cmd}{high_mem_cmd}{cyan_color('--cpus-per-task')}={cpus_per_task} \"\n",
+    "      f\"{cyan_color('--job-name')}='sc_pipeline' {cyan_color('--chdir')}='.' {cyan_color('--ntasks')}=1 \"\n",
+    "      f\"{cyan_color('--output')}={log_out} {cyan_color('--error')}={log_err} \"\n",
+    "      f\"{CURR_DIR}/{red_color('sc_pipeline.sh')} {META} {OUT} {ANNO} {ANNO_F} {N_PROC} {PRE_MERGED} {SOBJ} {SFOBJ} {VERB}\")"
    ]
   },
   {
@@ -3203,19 +3262,19 @@
     "\n",
     "Obtain `sbatch` commands to run the **full** VIPER regulon pipeline.\n",
     "\n",
-    "*Please move to* `scGRN/regulon_pipeline` *or specify* `CURR_DIR` *in the cell below.*"
+    "*Please move to* `scGRN/regulon_pipeline` *or specify* `CURR_DIR` with the `regulon_pipeline.sh` script *in the cell below.*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='2:00:00' \u001b[36m--qos\u001b[0m=debug  \u001b[36m--constraint\u001b[0m=highmem \u001b[36m--cpus-per-task\u001b[0m=48 \u001b[36m--job-name\u001b[0m='VIPER_pyscenic_pipeline' \u001b[36m--chdir\u001b[0m='.' \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/VIPER_pyscenic_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/VIPER_pyscenic_pipeline_%j.err ./\u001b[31mregulon_pipeline.sh\u001b[0m ../sc_metadata.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 pyscenic 0.95 T 12 T T\n"
+      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='12:00:00'  \u001b[36m--cpus-per-task\u001b[0m=24 \u001b[36m--job-name\u001b[0m='VIPER_pyscenic_pipeline' \u001b[36m--chdir\u001b[0m='.' \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/VIPER_pyscenic_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/VIPER_pyscenic_pipeline_%j.err ./\u001b[31mregulon_pipeline.sh\u001b[0m /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19/cell_type_meta.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 pyscenic 0.95 T 12 T F\n"
      ]
     }
    ],
@@ -3230,19 +3289,19 @@
     "PLEIOT_CORR = 'T'\n",
     "N_PROC = 12\n",
     "SOBJ = 'T'\n",
-    "VERB = 'T'\n",
+    "VERB = 'F'\n",
     "\n",
     "log_folder = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs'  # <- choose log folder!\n",
     "log_out = os.path.join(log_folder, f'VIPER_{REGULON}_pipeline_%j.out')\n",
     "log_err = os.path.join(log_folder, f'VIPER_{REGULON}_pipeline_%j.err')\n",
     "\n",
-    "cpus_per_task = 48\n",
-    "hours = 24\n",
+    "cpus_per_task = 24\n",
+    "hours = 12\n",
     "\n",
-    "high_mem = True  # using high-memory nodes for large datasets\n",
+    "high_mem = False  # using high-memory nodes for large datasets\n",
     "high_mem_cmd = f' {cyan_color(\"--constraint\")}=highmem ' if high_mem else ' '  # formatting high_mem\n",
     "\n",
-    "qos_debug = True  # whether to use QOS queue (debug or not)\n",
+    "qos_debug = False  # whether to use QOS queue (debug or not)\n",
     "qos_debug_cmd = f' {cyan_color(\"--qos\")}=debug ' if qos_debug else ' '  # formatting qos_debug\n",
     "hours = 2 if qos_debug else hours  # decreasing the number of hours for debug mode\n",
     "\n",
@@ -3280,7 +3339,12 @@
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
-  "toc-showmarkdowntxt": false
+  "toc-showmarkdowntxt": false,
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 4
