--- a/notebooks/Generate_sbatch_commands.ipynb
+++ b/notebooks/Generate_sbatch_commands.ipynb
@@ -531,7 +531,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='2:00:00' \u001b[36m--qos\u001b[0m=debug  \u001b[36m--cpus-per-task\u001b[0m=48 \u001b[36m--job-name\u001b[0m='sc_pipeline' \u001b[36m--chdir\u001b[0m=/gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/sc_pipeline \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/sc_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/sc_pipeline_%j.err /gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/sc_pipeline/\u001b[31msc_pipeline.sh\u001b[0m ../sc_metadata.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 HumanPrimaryCellAtlasData /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/data/SingleR 12 F T F F\n"
+      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='2:00:00' \u001b[36m--qos\u001b[0m=debug  \u001b[36m--cpus-per-task\u001b[0m=48 \u001b[36m--job-name\u001b[0m='sc_pipeline' \u001b[36m--chdir\u001b[0m=/gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/sc_pipeline \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/sbatch/logs/sc_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/sbatch/logs/sc_pipeline_%j.err /gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/sc_pipeline/\u001b[31msc_pipeline.sh\u001b[0m ../sc_metadata_debug.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 HumanPrimaryCellAtlasData /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/data/SingleR 12 F T F F\n"
      ]
     }
    ],
@@ -582,14 +582,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='2:00:00' \u001b[36m--qos\u001b[0m=debug  \u001b[36m--cpus-per-task\u001b[0m=24 \u001b[36m--job-name\u001b[0m='VIPER_pyscenic_pipeline' \u001b[36m--chdir\u001b[0m=/gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/regulon_pipeline \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/VIPER_pyscenic_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/logs/VIPER_pyscenic_pipeline_%j.err /gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/regulon_pipeline/\u001b[31mregulon_pipeline.sh\u001b[0m /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19/cell_type_meta.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 pyscenic 0.95 T 12 T F\n"
+      "\u001b[31msbatch\u001b[0m \u001b[36m--time\u001b[0m='2:00:00' \u001b[36m--qos\u001b[0m=debug  \u001b[36m--cpus-per-task\u001b[0m=24 \u001b[36m--job-name\u001b[0m='VIPER_pyscenic_pipeline' \u001b[36m--chdir\u001b[0m=/gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/regulon_pipeline \u001b[36m--ntasks\u001b[0m=1 \u001b[36m--output\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/sbatch/logs/VIPER_pyscenic_pipeline_%j.out \u001b[36m--error\u001b[0m=/gpfs/projects/bsc08/shared_projects/scGRN_analysis/sbatch/logs/VIPER_pyscenic_pipeline_%j.err /gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/regulon_pipeline/\u001b[31mregulon_pipeline.sh\u001b[0m /gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/sc_metadata_debug.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19/cell_type_meta_debug.tsv /gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19 pyscenic 0.95 T 12 T F\n"
      ]
     }
    ],
@@ -597,7 +597,8 @@
     "CURR_DIR = '/gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/regulon_pipeline'\n",
     "\n",
     "# Current constants\n",
-    "META = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19/cell_type_meta.tsv'\n",
+    "META = '/gpfs/home/bsc08/bsc08890/scGRN_analysis/scGRN/single_cell_processing/sc_metadata_debug.tsv'\n",
+    "META_CTYPE = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19/cell_type_meta_debug.tsv'\n",
     "OUT = '/gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19'\n",
     "REGULON = 'pyscenic'\n",
     "Q_THRESH = 0.95\n",
@@ -623,7 +624,7 @@
     "print(f\"{red_color('sbatch')} {cyan_color('--time')}='{hours}:00:00'{qos_debug_cmd}{high_mem_cmd}{cyan_color('--cpus-per-task')}={cpus_per_task} \"\n",
     "      f\"{cyan_color('--job-name')}='VIPER_{REGULON}_pipeline' {cyan_color('--chdir')}={CURR_DIR} {cyan_color('--ntasks')}=1 \"\n",
     "      f\"{cyan_color('--output')}={log_out} {cyan_color('--error')}={log_err} \"\n",
-    "      f\"{CURR_DIR}/{red_color('regulon_pipeline.sh')} {META} {OUT} {REGULON} {Q_THRESH} {PLEIOT_CORR} {N_PROC} {SOBJ} {VERB}\")"
+    "      f\"{CURR_DIR}/{red_color('regulon_pipeline.sh')} {META} {META_CTYPE} {OUT} {REGULON} {Q_THRESH} {PLEIOT_CORR} {N_PROC} {SOBJ} {VERB}\")"
    ]
   },
   {
