finished community and enrichment notebooks, updated the rest

--- a/notebooks/GRNBoost2_Community_analysis.ipynb
+++ b/notebooks/GRNBoost2_Community_analysis.ipynb
@@ -3147,49 +3147,9 @@
     "    Load central genes from each community calculated during previous runs and stored in pickle format. \n",
     "    Calculating central genes is a long process, so we can restore ths result from saved file.\n",
     "    \"\"\"\n",
-    "    \n",
-    "    # Prepare everything to save the figs and metadata   \n",
-    "    if pat is None or 'all' in pat:\n",
-    "        \n",
-    "        # Cell-type aggregated data\n",
-    "        data_folder = 'all_data' if cell_type in ['all', 'raw_data'] else cell_type.replace('raw_data_', '')\n",
-    "        \n",
-    "        figs_as = os.path.join(_DATA_HOME, 'cell_types', data_folder, 'figs', 'grnboost2', 'raw_data')\n",
-    "        data_to = os.path.join(_DATA_HOME, 'cell_types', data_folder, 'data', 'grnboost2', f'{algo}_communities')\n",
-    "        data_as = os.path.join(data_to, 'raw_data_communities_info.pickle')\n",
-    "        \n",
-    "    elif pat in ['C', 'M', 'S']:\n",
-    "        \n",
-    "        # Patient-type aggregated data\n",
-    "        data_folder = 'all_data' if cell_type in ['all', 'raw_data'] else cell_type.replace('raw_data_', '')\n",
-    "        \n",
-    "        figs_as = os.path.join(_DATA_HOME, 'cell_types', data_folder, 'figs', 'grnboost2', \n",
-    "                               f'raw_data_{pat}_type')\n",
-    "        \n",
-    "        data_to = os.path.join(_DATA_HOME, 'cell_types', data_folder, 'data', 'grnboost2', f'{algo}_communities')\n",
-    "        data_as = os.path.join(data_to, f'raw_data_{pat}_type_communities_info.pickle')\n",
-    "        \n",
-    "    else:\n",
-    "\n",
-    "        # Include all cell types\n",
-    "        if cell_type == 'all_data' or cell_type == 'raw_data' or cell_type == 'all':\n",
-    "            tag = 'raw_data'\n",
-    "        # Specific cell type\n",
-    "        else:\n",
-    "            # Formatting input params for accessing the correct file\n",
-    "            if 'raw_data_' not in cell_type:\n",
-    "                tag = f'raw_data_{cell_type}'\n",
-    "            else:\n",
-    "                tag = cell_type\n",
-    "        \n",
-    "        # Loading patient-specific data\n",
-    "        figs_as = os.path.join(_DATA_HOME, pat, 'figs', 'grnboost2', f'{tag}')\n",
-    "        \n",
-    "        data_to = os.path.join(_DATA_HOME, pat, 'data', 'grnboost2', f'{algo}_communities')\n",
-    "        data_as = os.path.join(data_to, f'{tag}_communities_info.pickle')\n",
     "        \n",
     "    try:\n",
-    "        df = pd.read_pickle(data_as)\n",
+    "        df = scGRN.ana.get_community_info(pat=pat, cell_type=cell_type, algo=algo)\n",
     "        print(f'Successfully loaded previously saved results at {data_as}!')\n",
     "        all_partition_genes = {\n",
     "            i: {\n",
