--- a/notebooks/Generate_sbatch_commands.ipynb
+++ b/notebooks/Generate_sbatch_commands.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -458,16 +458,15 @@
        "[12 rows x 25 columns]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "import os  # file system\n",
-    "from termcolor import colored  # colored text output\n",
-    "\n",
     "import pandas as pd  # tabular data\n",
+    "from termcolor import colored  # colored text output\n",
     "\n",
     "# Setting working directory as home\n",
     "home_dir = os.path.expanduser(\"~\")\n",
@@ -533,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -561,8 +560,8 @@
     "VERB = \"F\"\n",
     "\n",
     "log_folder = \"/gpfs/projects/bsc08/shared_projects/scGRN_analysis/sbatch/logs\"  # <- choose log folder!\n",
-    "log_out = os.path.join(log_folder, f\"sc_pipeline_%j.out\")\n",
-    "log_err = os.path.join(log_folder, f\"sc_pipeline_%j.err\")\n",
+    "log_out = os.path.join(log_folder, \"sc_pipeline_%j.out\")\n",
+    "log_err = os.path.join(log_folder, \"sc_pipeline_%j.err\")\n",
     "\n",
     "cpus_per_task = 48\n",
     "hours = 12\n",
@@ -599,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -675,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -698,8 +697,8 @@
     "IN_PATH = \"/gpfs/projects/bsc08/shared_projects/scGRN_analysis/Data_home/res/covid_19/C51/data/Seurat/raw_data_T_cells.tsv\"\n",
     "OUT_PATH = \"/gpfs/projects/bsc08/shared_projects/scGRN_analysis/debug\"\n",
     "LOG_FOLDER = \"/gpfs/projects/bsc08/shared_projects/scGRN_analysis/sbatch/logs\"\n",
-    "log_out = os.path.join(LOG_FOLDER, f\"sc_pipeline_%j.out\")\n",
-    "log_err = os.path.join(LOG_FOLDER, f\"sc_pipeline_%j.err\")\n",
+    "log_out = os.path.join(LOG_FOLDER, \"sc_pipeline_%j.out\")\n",
+    "log_err = os.path.join(LOG_FOLDER, \"sc_pipeline_%j.err\")\n",
     "\n",
     "# Run parameters\n",
     "method = \"grnboost2\"\n",
@@ -762,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -940,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1083,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -1599,7 +1598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -1774,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1911,7 +1910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -2035,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2433,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -4138,6 +4137,18 @@
    "display_name": "Python 3",
    "language": "python",
    "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.4"
   },
   "toc-autonumbering": false,
   "toc-showcode": false,
