--- a/notebooks/GRNBoost2_Community_analysis.ipynb
+++ b/notebooks/GRNBoost2_Community_analysis.ipynb
@@ -3408,7 +3408,7 @@
     "    Give community analysis summary.\n",
     "\n",
     "    :param cell_type: Provided cell type\n",
-    "    :param db: Functional database\n",
+    "    :param db: The functiona annotation db, could be MSigDB, GO, DoRothEA, etc.\n",
     "    :param algo: The community detection algorithm used\n",
     "    :param save_fig: Whether to save the figure\n",
     "    \"\"\"\n",
@@ -3670,7 +3670,9 @@
     "    \n",
     "    :param pat: Patient ID\n",
     "    :param cell_type: Provided cell type\n",
-    "    :param top_n: The number of top links to visualize\n",
+    "    :param algo: The community detection algorithm, either 'leiden' or 'louvain'\n",
+    "    :param db: The functiona annotation db, could be MSigDB, GO, DoRothEA, etc.\n",
+    "    :param wordcloud_display: Choose what to show as word, could be either 'genes' or 'funcs'\n",
     "    :param save_fig: Whether to save the figure\n",
     "    \"\"\"\n",
     "    \n",
